airflow/logs/dag_id=etl_dag/run_id=manual__2025-01-30T17:16:32-07:00/task_id=collect_raw_stocks/attempt=2.log
[2025-01-31T00:20:15.664+0000] {local_task_job_runner.py:123} INFO - ::group::Pre task execution logs
[2025-01-31T00:20:15.673+0000] {taskinstance.py:2613} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: etl_dag.collect_raw_stocks manual__2025-01-30T17:16:32-07:00 [queued]>
[2025-01-31T00:20:15.676+0000] {taskinstance.py:2613} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: etl_dag.collect_raw_stocks manual__2025-01-30T17:16:32-07:00 [queued]>
[2025-01-31T00:20:15.677+0000] {taskinstance.py:2866} INFO - Starting attempt 2 of 2
[2025-01-31T00:20:15.683+0000] {taskinstance.py:2889} INFO - Executing <Task(BashOperator): collect_raw_stocks> on 2025-01-31 00:16:32+00:00
[2025-01-31T00:20:15.686+0000] {standard_task_runner.py:72} INFO - Started process 4320 to run task
[2025-01-31T00:20:15.688+0000] {standard_task_runner.py:104} INFO - Running: ['***', 'tasks', 'run', 'etl_dag', 'collect_raw_stocks', 'manual__2025-01-30T17:16:32-07:00', '--job-id', '108', '--raw', '--subdir', 'DAGS_FOLDER/my_first_dag.py', '--cfg-path', '/tmp/tmp3h350qkz']
[2025-01-31T00:20:15.689+0000] {standard_task_runner.py:105} INFO - Job 108: Subtask collect_raw_stocks
[2025-01-31T00:20:15.726+0000] {task_command.py:467} INFO - Running <TaskInstance: etl_dag.collect_raw_stocks manual__2025-01-30T17:16:32-07:00 [running]> on host 48308722451a
[2025-01-31T00:20:15.767+0000] {taskinstance.py:3132} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='etl_dag' AIRFLOW_CTX_TASK_ID='collect_raw_stocks' AIRFLOW_CTX_EXECUTION_DATE='2025-01-31T00:16:32+00:00' AIRFLOW_CTX_TRY_NUMBER='2' AIRFLOW_CTX_DAG_RUN_ID='manual__2025-01-30T17:16:32-07:00'
[2025-01-31T00:20:15.768+0000] {taskinstance.py:731} INFO - ::endgroup::
[2025-01-31T00:20:15.773+0000] {subprocess.py:78} INFO - Tmp dir root location: /tmp
[2025-01-31T00:20:15.774+0000] {subprocess.py:88} INFO - Running command: ['/usr/bin/bash', '-c', 'python3 "/opt/***/data_collection/"collect_stocks.py --data_lake_path $DATA_LAKE_PATH --stock_tickers $STOCK_TICKERS --execution_date $EXECUTION_DATE --stock_collect_mode $STOCK_COLLECT_MODE --start_date_missing_values $START_DATE_MISSING_VALUES --end_date_missing_values $END_DATE_MISSING_VALUES']
[2025-01-31T00:20:15.778+0000] {subprocess.py:99} INFO - Output:
[2025-01-31T00:20:15.811+0000] {subprocess.py:106} INFO -   File "/opt/***/data_collection/collect_stocks.py", line 106
[2025-01-31T00:20:15.811+0000] {subprocess.py:106} INFO -     f"{args.data_lake_path}refined/parquet/stocks/stocks.parquet"
[2025-01-31T00:20:15.811+0000] {subprocess.py:106} INFO -     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
[2025-01-31T00:20:15.812+0000] {subprocess.py:106} INFO - SyntaxError: invalid syntax. Perhaps you forgot a comma?
[2025-01-31T00:20:15.814+0000] {subprocess.py:110} INFO - Command exited with return code 1
[2025-01-31T00:20:15.820+0000] {taskinstance.py:3311} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/models/taskinstance.py", line 767, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/models/taskinstance.py", line 733, in _execute_callable
    return ExecutionCallableRunner(
           ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/utils/operator_helpers.py", line 252, in run
    return self.func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/models/baseoperator.py", line 422, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/operators/bash.py", line 276, in execute
    raise AirflowException(
airflow.exceptions.AirflowException: Bash command failed. The command returned a non-zero exit code 1.
[2025-01-31T00:20:15.823+0000] {taskinstance.py:1225} INFO - Marking task as FAILED. dag_id=etl_dag, task_id=collect_raw_stocks, run_id=manual__2025-01-30T17:16:32-07:00, execution_date=20250131T001632, start_date=20250131T002015, end_date=20250131T002015
[2025-01-31T00:20:15.831+0000] {taskinstance.py:340} INFO - ::group::Post task execution logs
[2025-01-31T00:20:15.832+0000] {standard_task_runner.py:124} ERROR - Failed to execute job 108 for task collect_raw_stocks (Bash command failed. The command returned a non-zero exit code 1.; 4320)
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/task/task_runner/standard_task_runner.py", line 117, in _start_by_fork
    ret = args.func(args, dag=self.dag)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/cli/cli_config.py", line 49, in command
    return func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/utils/cli.py", line 116, in wrapper
    return f(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/cli/commands/task_command.py", line 483, in task_run
    task_return_code = _run_task_by_selected_method(args, _dag, ti)
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/cli/commands/task_command.py", line 256, in _run_task_by_selected_method
    return _run_raw_task(args, ti)
           ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/cli/commands/task_command.py", line 341, in _run_raw_task
    return ti._run_raw_task(
           ^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/utils/session.py", line 97, in wrapper
    return func(*args, session=session, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/models/taskinstance.py", line 3005, in _run_raw_task
    return _run_raw_task(
           ^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/models/taskinstance.py", line 273, in _run_raw_task
    TaskInstance._execute_task_with_callbacks(
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/models/taskinstance.py", line 3159, in _execute_task_with_callbacks
    result = self._execute_task(context, task_orig)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/models/taskinstance.py", line 3183, in _execute_task
    return _execute_task(self, context, task_orig)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/models/taskinstance.py", line 767, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/models/taskinstance.py", line 733, in _execute_callable
    return ExecutionCallableRunner(
           ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/utils/operator_helpers.py", line 252, in run
    return self.func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/models/baseoperator.py", line 422, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.11/site-packages/airflow/operators/bash.py", line 276, in execute
    raise AirflowException(
airflow.exceptions.AirflowException: Bash command failed. The command returned a non-zero exit code 1.
[2025-01-31T00:20:15.870+0000] {local_task_job_runner.py:266} INFO - Task exited with return code 1
[2025-01-31T00:20:15.879+0000] {taskinstance.py:3895} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2025-01-31T00:20:15.881+0000] {local_task_job_runner.py:245} INFO - ::endgroup::
